force-app/main/default/objects/Highlight_Badge_Definition__c/Highlight_Badge_Definition__c.object-meta.xml
<CustomObject>
    <description>Configuration for an individual highlight badge</description>
    <label>Highlight Badge Definition</label>
    <nameField>
        <label>Highlight Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Highlight Badge Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>