force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A highlight badge definition must be active to be displayed on record pages</description>
    <inlineHelpText>A highlight badge definition must be active to be displayed on record pages</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>