force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, an alert will display to the user when the page loads</description>
    <inlineHelpText>If checked, an alert will display to the user when the page loads</inlineHelpText>
    <label>Alert</label>
    <type>Checkbox</type>
</CustomField>