force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Alert_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Alert_Frequency__c</fullName>
    <description>Determines how often an alert will be shown to a particular user</description>
    <inlineHelpText>Determines how often an alert will be shown to a particular user</inlineHelpText>
    <label>Alert Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Once Per Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>