force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <description>When Alert is checked, this message displays in the pop-up window a page loads. Use {!My_Custom_Field__c} syntax to display merged values from the child object</description>
    <inlineHelpText>When Alert is checked, this message displays in the pop-up window a page loads. Use {!My_Custom_Field__c} syntax to display merged values from the child object</inlineHelpText>
    <label>Alert Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>