force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <description>The background color of the displayed badge</description>
    <inlineHelpText>The background color of the displayed badge</inlineHelpText>
    <label>Background Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>