force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Common_Ancestor_Object__c.field-meta.xml
<CustomField>
    <fullName>Common_Ancestor_Object__c</fullName>
    <description>The API Name of the Salesforce object that serves as a shared ancestor or linking object between the Display Object and the Source Object</description>
    <inlineHelpText>The API Name of the Salesforce object that serves as a shared ancestor or linking object between the Display Object and the Source Object</inlineHelpText>
    <label>Common Ancestor Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>