force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Common_Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Common_Parent_Object__c</fullName>
    <label>Common Parent Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>