force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Confetti__c.field-meta.xml
<CustomField>
    <fullName>Confetti__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, confetti will rain when the page loads</description>
    <inlineHelpText>If checked, confetti will rain when the page loads</inlineHelpText>
    <label>Confetti</label>
    <type>Checkbox</type>
</CustomField>