force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Confetti_Number__c.field-meta.xml
<CustomField>
    <fullName>Confetti_Number__c</fullName>
    <label>Confetti Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Few</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Plenty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>