force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Confetti_Size__c.field-meta.xml
<CustomField>
    <fullName>Confetti_Size__c</fullName>
    <description>The size of the confetti items</description>
    <inlineHelpText>The size of the confetti items</inlineHelpText>
    <label>Confetti Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>