force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Confetti_Volume__c.field-meta.xml
<CustomField>
    <fullName>Confetti_Volume__c</fullName>
    <description>The quantity of confetti</description>
    <inlineHelpText>The quantity of confetti</inlineHelpText>
    <label>Confetti Volume</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>few</fullName>
            </value>
            <value>
                <fullName>normal</fullName>
            </value>
            <value>
                <fullName>plenty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>