force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Display_Object__c.field-meta.xml
<CustomField>
    <fullName>Display_Object__c</fullName>
    <description>The API Name of the Salesforce object where the Highlight Badge will appear</description>
    <inlineHelpText>The API Name of the Salesforce object where the Highlight Badge will appear</inlineHelpText>
    <label>Display Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>