force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Display_to_Ancestor_Path__c.field-meta.xml
<CustomField>
    <fullName>Display_to_Ancestor_Path__c</fullName>
    <description>The API path from the Display Object to the Common Ancestor Object</description>
    <inlineHelpText>The API path from the Display Object to the Common Ancestor Object</inlineHelpText>
    <label>Display to Ancestor Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>