force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <description>Additional criteria to include in the WHERE clause of the SOQL query</description>
    <inlineHelpText>Additional criteria to include in the WHERE clause of the SOQL query</inlineHelpText>
    <label>Filter Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>