force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>Use icon names from the SLDS library (e.g. utility:alert)</description>
    <inlineHelpText>Use icon names from the SLDS library (e.g. utility:alert)</inlineHelpText>
    <label>Icon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>