force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Include_Label_in_Toast__c.field-meta.xml
<CustomField>
    <fullName>Include_Label_in_Toast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Label will be displayed as the toast&apos;s title.</description>
    <inlineHelpText>If checked, the Label will be displayed as the toast&apos;s title.</inlineHelpText>
    <label>Include Label in Toast</label>
    <type>Checkbox</type>
</CustomField>