force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The label of the displayed badge</description>
    <inlineHelpText>The label of the displayed badge</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>