force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Label_Color__c.field-meta.xml
<CustomField>
    <fullName>Label_Color__c</fullName>
    <description>The label text color of the displayed badge</description>
    <inlineHelpText>The label text color of the displayed badge</inlineHelpText>
    <label>Label Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>