force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <description>The maximum number of badges to show for this badge definition</description>
    <inlineHelpText>The maximum number of badges to show for this badge definition</inlineHelpText>
    <label>Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>