force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <description>Optionally, define the order in which badges are displayed (e.g. LastModifiedDate DESC)</description>
    <inlineHelpText>Optionally, define the order in which badges are displayed (e.g. LastModifiedDate DESC)</inlineHelpText>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>