force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Source_Detail_Fields__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail_Fields__c</fullName>
    <description>Enter API field names, separated by commas, for any fields from the Source Object that should be displayed when a user selects a badge</description>
    <inlineHelpText>Enter API field names, separated by commas, for any fields from the Source Object that should be displayed when a user selects a badge</inlineHelpText>
    <label>Source Detail Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>