force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The API Name of the Salesforce object that is the source of the badge information. For example, a badge on a contact record displaying open cases would have a Source Object of &apos;Case&apos;.</description>
    <inlineHelpText>The API Name of the Salesforce object that is the source of the badge information. For example, a badge on a contact record displaying open cases would have a Source Object of &apos;Case&apos;.</inlineHelpText>
    <label>Source Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>