force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Source_to_Parent_Path__c.field-meta.xml
<CustomField>
    <fullName>Source_to_Parent_Path__c</fullName>
    <description>The API path from the Source Object to the Parent Object</description>
    <inlineHelpText>The API path from the Source Object to the Parent Object</inlineHelpText>
    <label>Source to Parent Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>