force-app/main/default/objects/Highlight_Badge_Definition__c/fields/Toast_Mode__c.field-meta.xml
<CustomField>
    <fullName>Toast_Mode__c</fullName>
    <description>Determines how persistent the toast is. Valid values are: dismissible (default), remains visible until you click the close button or 3 seconds has elapsed, whichever comes first; pester, remains visible for 3 seconds and disappears automatically. No close button is provided; sticky, remains visible until you click the close button.</description>
    <inlineHelpText>Determines how persistent the toast is. Valid values are: dismissible (default), remains visible until you click the close button or 3 seconds has elapsed, whichever comes first; pester, remains visible for 3 seconds and disappears automatically. No close button is provided; sticky, remains visible until you click the close button.</inlineHelpText>
    <label>Toast Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dismissible</fullName>
            </value>
            <value>
                <fullName>pester</fullName>
            </value>
            <value>
                <fullName>sticky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>