force-app/main/default/objects/Highlight_Badge_Definition__c/validationRules/EnforceHexColorFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>EnforceHexColorFormat</fullName>
    <active>true</active>
    <description>Enforce the formatting of hexadecimal numbers</description>
    <errorConditionFormula>OR(
 AND(
  !ISBLANK( Label_Color__c ), 
  OR(
   LEFT( Label_Color__c, 1 ) &lt;&gt; &quot;#&quot;, 
   LEN( Label_Color__c ) &lt; 7
  )
 ),
 AND(
  !ISBLANK( Background_Color__c ), 
  OR(
   LEFT( Background_Color__c, 1 ) &lt;&gt; &quot;#&quot;, 
   LEN( Background_Color__c ) &lt; 7
  )
 )
)</errorConditionFormula>
    <errorMessage>Hexadecimal numbers should include a leading &quot;#&quot; and must have a valid length</errorMessage>
</ValidationRule>