force-app/main/default/objects/Highlight_Badge_Definition__c/validationRules/EnforceRequiredFieldsForActivation.validationRule-meta.xml
<ValidationRule>
    <fullName>EnforceRequiredFieldsForActivation</fullName>
    <active>true</active>
    <description>Ensure all required fields have values before a highlight badge definition can be activated.</description>
    <errorConditionFormula>AND(
 Active__c ,
 !PRIORVALUE(Active__c) ,
 OR(
  ISBLANK( Label__c ),
  ISBLANK( Display_Object__c ),
  ISBLANK( Source_Object__c ),
  ISBLANK( Common_Ancestor_Object__c ),
  ISBLANK( Display_to_Ancestor_Path__c ),
  ISBLANK( Source_to_Ancestor_Path__c )
 )
)</errorConditionFormula>
    <errorMessage>This record is not ready for activation. Ensure the definition has a label and all objects and relationship paths are defined.</errorMessage>
</ValidationRule>