force-app/main/default/objects/Highlight_Badge_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Display_Object__c</columns>
    <columns>Active__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Source_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>